#88 - Article layout issues with sidebar tables

--- a/frontend/styles/application.sass
+++ b/frontend/styles/application.sass
@@ -816,6 +816,8 @@ div.data p.removed {
 // == Wikinizer ============================================================
 
 .wikidiff{
+  position: relative;
+
   .noresize{
     overflow: hidden;
     width: auto !important;
@@ -833,6 +835,10 @@ div.data p.removed {
       width: 100%;
       margin-right: 0;
     }
+  }
+  .ww-edit{
+    position: relative;
+    min-height: 20px;
   }
 }
 
